# ants-in-the-shell

./: .gitignore  README.MD  colony-cycle.md  pyproject.toml
antfarm/: __init__.py  __main__.py  actions.py  ant.py  colony.py  commands.py  config.py  exceptions.py  input.py  renderer.py  runtime.py  simulation.py  tile.py  world.py  worldgen.py
tests/: test_ant.py  test_colony.py  test_input.py  test_renderer.py  test_runtime.py  test_simulation.py  test_smoke.py  test_tile.py  test_world.py  test_worldgen.py
